# TikTok_Dash_Projects

./: .gitignore  AGENTS.md  CLAUDE.md  development_log.md  pyproject.toml  requirements.txt
.qoder/rules/: Rules.md
Demo/股票探索/: app.ipynb  requirements.txt
Demo/股票日线行情分析/: A股日线行情.ipynb  A股日线行情分析.py  requirements.txt
Demo/货运分析/: app.ipynb  app.py  get_data.py  requirements.txt  示例数据.csv
Doc/Authorization/: Get_Authorized_Category_Assets.md  Get_Authorized_Shops.md
Doc/Event/: Delete_Shop_Webhook.md  Get_Shop_Webhooks.md  Update_Shop_Webhook.md
Doc/Logistics/: Get_Available_Shipping_Template.md  Get_Global_Seller_Warehouse.md  Get_Logistics_Tracking.md  Get_Shipping_Providers.md  Get_Warehouse_Delivery_Options.md  Get_Warehouse_List.md
Doc/Products/: Check_Listing_Prerequisites.md  Check_Product_Listing.md  Common_mistakes.md  Create_Product.md  Get_Attributes.md  Get_Brands.md  Get_Categories.md  Get_Category_Rules.md  Listing_quality_diagnosis.md  Product_pricing.md  Recommend_Category.md  Search_Size_Charts.md  Upload_Product_File.md  Upload_Product_Image.md
Doc/Seller/: Get_Active_Shops.md  Get_Seller_Permissions.md  Get_Shop_Group.md
Doc/TikTok_Shop_API_Concepts/: Common_errors.md  Common_parameters.md  Methods_and_endpoints.md  Overview.md  Rate_limits.md  Regions_and_languages.md  Sign_your_API_request.md
scripts/: init_db.py  migrate_add_pricing_columns.py  seed_products.py
src/: config.py
src/apify/: __init__.py  client.py  schemas.py
src/database/: __init__.py  engine.py  models.py  repository.py
src/tiktok/: api.py  (+4 more)
tests/: conftest.py
(+17 files in other folders)
