[project]
name = "tiktok-1688-sync"
version = "0.1.0"
description = "Dash + Feffery 全栈应用 — 1688 数据采集 → PostgreSQL → TikTok Shop 推送"
requires-python = ">=3.13"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = false

[tool.mypy]
strict = true
python_version = "3.13"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true

ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["apify_client.*", "feffery_antd_components", "feffery_utils_components", "dash"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
